# QRTrans

./: .gitignore  README.md  pyproject.toml  sudotodo.md  todo.md
.github/workflows/: build-windows-exe.yml
docs/: packaging-windows.md
docs/superpowers/notes/: 2026-06-18-colormatrix-kickoff-prep.md
docs/superpowers/plans/: 2026-06-17-qrtrans.md  2026-06-18-colormatrix.md  2026-06-18-progress-feedback.md  2026-06-18-windows-packaging.md  2026-06-19-viewer.md
docs/superpowers/specs/: 2026-06-17-qrtrans-design.md  2026-06-18-colormatrix-design.md  2026-06-18-progress-feedback-design.md  2026-06-18-windows-packaging-design.md  2026-06-19-viewer-design.md  2026-06-20-colormatrix-margin-layout-design.md
packaging/: entry.py  entry_viewer.py  qrtrans.spec  qrtrans_viewer.spec
qrtrans/: array_pack.py  chunker.py  cli.py  cm_decoder.py  cm_encoder.py  cm_protocol.py  decoder.py  encoder.py  finder.py  fs_walk.py  palette.py  progress.py  protocol.py  qr_render.py  qr_scan.py  rs.py
qrtrans_viewer/: __main__.py  core.py  gui.py
tests/: conftest.py  test_array_pack.py  test_chunker.py  test_cli.py  test_cm_decoder.py  test_cm_encoder.py  test_cm_protocol.py  test_colormatrix_e2e.py  test_decoder.py  test_encoder.py  test_end_to_end.py  test_finder.py  test_fs_walk.py  test_palette.py  test_progress.py  test_protocol.py  test_qr_render.py  test_qr_scan.py  test_rs.py  test_smoke.py  test_viewer_core.py
